--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -592,4 +592,69 @@ workflows:
             - unit
             - integration
             - e2e
+  infra-pr:
+    jobs:
+      - setup-workspace:
+          filters:
+            branches:
+              only:
+                - staging
+      - setup-infra-workspace:
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - setup-workspace
+      - docker-web:
+          context:
+            - prod
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - setup-infra-workspace
+      - docker-api:
+          context:
+            - prod
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - setup-infra-workspace
+      - docker-landing:
+          context:
+            - prod
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - setup-infra-workspace
+      - plan:
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - docker-web
+            - docker-api
+            - docker-landing
+      - hold-apply:
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - plan
+          type: approval
+      - apply:
+          filters:
+            branches:
+              only:
+                - staging
+          requires:
+            - hold-apply
 working_directory: ~/project
