--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "nx run-many --all --target=test --parallel=1 --runInBand",
     "test:unit": "nx run-many --all --target=test:unit --parallel=5",
     "test:integration": "nx run-many --all --target=test:integration --parallel=1",
-    "lint": "nx run-many --all --target=lint --parallel=5 --quiet",
+    "lint": "nx run-many --all --target=lint --parallel=5 --verbose",
     "format": "npx prettier --write \"./**/*.{graphql,yaml,json}\" && terraform -chdir=infra/terraform fmt --recursive",
     "nx": "nx",
     "update": "nx migrate @nx/workspace",
