--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/cssinjs": "1.17.2",
+    "@ant-design/cssinjs": "1.20.0",
     "@ant-design/icons": "5.3.0",
-    "@ant-design/pro-components": "2.4.4",
+    "@ant-design/pro-components": "2.7.1",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
-    "@auth0/nextjs-auth0": "3.1.0",
+    "@auth0/nextjs-auth0": "3.5.0",
     "@codelab/eslint-plugin": "file:./dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
     "@codemirror/autocomplete": "6.12.0",
@@ -56,7 +56,6 @@
     "@codemirror/view": "6.24.1",
     "@dnd-kit/core": "6.0.5",
     "@dnd-kit/modifiers": "7.0.0",
-    "@editorjs/editorjs": "2.28.2",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
     "@fortawesome/free-brands-svg-icons": "6.1.2",
@@ -101,10 +100,10 @@
     "@pinojs/json-colorizer": "4.0.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
-    "@rjsf/antd": "5.17.1",
-    "@rjsf/core": "5.17.1",
-    "@rjsf/utils": "5.17.1",
-    "@rjsf/validator-ajv8": "5.17.1",
+    "@rjsf/antd": "5.18.3",
+    "@rjsf/core": "5.18.3",
+    "@rjsf/utils": "5.18.3",
+    "@rjsf/validator-ajv8": "5.18.3",
     "@sinclair/typebox": "0.31.23",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
@@ -116,7 +115,7 @@
     "adm-zip": "0.5.10",
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
-    "antd": "5.14.2",
+    "antd": "5.16.5",
     "auth0": "4.3.1",
     "axios": "1.5.0",
     "chalk": "4.1.2",
@@ -129,8 +128,6 @@
     "cross-fetch": "3.1.4",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
-    "editorjs-react-renderer": "3.5.1",
-    "editorjs-text-color-plugin": "2.0.4",
     "env-var": "7.4.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
@@ -154,9 +151,9 @@
     "neo4j-driver": "5.16.0",
     "nestjs-pino": "4.0.0",
     "nestjs-typebox": "2.6.1",
-    "next": "13.5.3",
+    "next": "14.2.3",
     "next-http-proxy-middleware": "1.2.6",
-    "next-seo": "5.15.0",
+    "next-seo": "6.5.0",
     "object-typed": "1.0.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
@@ -206,17 +203,6 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
-    "@editorjs/checklist": "1.6.0",
-    "@editorjs/code": "2.9.0",
-    "@editorjs/delimiter": "1.4.0",
-    "@editorjs/header": "2.8.1",
-    "@editorjs/inline-code": "1.5.0",
-    "@editorjs/link": "2.6.2",
-    "@editorjs/list": "1.9.0",
-    "@editorjs/marker": "1.4.0",
-    "@editorjs/paragraph": "2.11.3",
-    "@editorjs/quote": "2.6.0",
-    "@editorjs/underline": "1.1.0",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.0.2",
@@ -370,7 +356,6 @@
   },
   "resolutions": {
     "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
-    "antd@5.4.2": "patch:antd@npm%3A5.4.2#./.yarn/patches/antd-npm-5.4.2-0091a657e9.patch"
+    "@types/react-dom": "18.2.9"
   }
 }
