--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ AUTH0_CLIENT_ID=UAkVJDeVRFYo1nmOv4JkSChj7AWscDYw
 # Your Auth0 application's Client Secret
 AUTH0_CLIENT_SECRET=
 
+AUTH0_SESSION_AUTO_SAVE=false
+
 # These are derived
 # AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
 # AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
