--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.20.0",
     "@ant-design/icons": "5.3.0",
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@ant-design/pro-components": "2.7.1",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
@@ -189,7 +190,8 @@
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
-    "rxjs": "7.8.1",
+    "rxjs": "7.8.0",
+    "server-only": "^0.0.1",
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
