--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.3",
+    "@graphql-codegen/typescript-document-nodes": "^4.0.6",
     "@graphql-hive/client": "^0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
@@ -79,6 +80,7 @@
     "@nestjs/config": "2.3.2",
     "@nestjs/core": "10.0.4",
     "@nestjs/cqrs": "10.0.1",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/graphql": "11.0.6",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.0.4",
@@ -118,6 +120,7 @@
     "antd": "5.16.5",
     "auth0": "4.3.1",
     "axios": "1.5.0",
+    "body-parser": "^1.20.2",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -125,6 +128,7 @@
     "clsx": "2.1.0",
     "cm6-graphql": "0.0.9",
     "codemirror": "6.0.1",
+    "cors": "^2.8.5",
     "cross-fetch": "3.1.4",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
@@ -137,6 +141,7 @@
     "graphql": "16.6.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
+    "graphql-ws": "^5.16.0",
     "isolated-vm": "4.6.0",
     "jest-text-transformer": "1.0.4",
     "jquery": "3.6.4",
@@ -198,6 +203,7 @@
     "voca": "1.4.0",
     "wait-on": "6.0.1",
     "winston": "3.8.2",
+    "ws": "^8.17.0",
     "yargs": "17.7.2"
   },
   "devDependencies": {
