--- a/infra/terraform/modules/codelab-api/tftpl/docker-compose.tftpl.yaml
+++ b/infra/terraform/modules/codelab-api/tftpl/docker-compose.tftpl.yaml
@@ -14,6 +14,8 @@ services:
       - NEO4J_URI=${neo4j_uri}
       - NEO4J_USER=${neo4j_user}
       - NEO4J_PASSWORD=${neo4j_password}
+      - DIGITALOCEAN_API_TOKEN=${digitalocean_api_token}
+      - DIGITALOCEAN_DROPLET_NAME=${digitalocean_droplet_name}
   # coredns:
   #   image: coredns/coredns:1.11.1
   #   volumes:
