--- a/apps/sites/project.json
+++ b/apps/sites/project.json
@@ -25,17 +25,16 @@
       "options": {
         "buildTarget": "sites:build",
         "dev": true,
-        "port": 80,
+        "port": 3080,
         "hostname": "0.0.0.0",
-        "maxWorkers": 4
+        "maxWorkers": 4,
+        "experimentalHttps": true
+        // "experimentalHttpsKey": ".ssh/codelab.test-key.pem",
+        // "experimentalHttpsCert": ".ssh/codelab-test.pem",
+        // "experimentalHttpsCa": "/Users/Webber/Library/Application Support/mkcert"
       },
       "configurations": {
         "ci": {},
-        "test": {
-          "buildTarget": "sites:build:test",
-          "memoryLimit": 8192,
-          "port": 3001
-        },
         "prod": {
           "buildTarget": "sites:build:prod",
           "dev": false
