refactor: test out different cypress reporter
refactor: test out different cypress reporter

refactor: test out different cypress reporter

--- a/apps/e2e/project.json
+++ b/apps/e2e/project.json
@@ -33,6 +33,7 @@
       },
       "configurations": {
         "test": {
+          "reporter": "../../node_modules/mochawesome",
           "devServerTarget": "e2e:serve:test",
           "record": false,
           "watch": false,
