--- a/package.json
+++ b/package.json
@@ -352,6 +352,7 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
+    "mochawesome": "^7.1.3",
     "nx": "17.1.1",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
