--- a/package.json
+++ b/package.json
@@ -312,6 +312,7 @@
     "cypress": "13.7.0",
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-multi-reporters": "1.6.3",
     "cypress-network-idle": "^1.14.2",
     "cypress-terminal-report": "6.0.1",
@@ -352,7 +353,6 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
-    "mochawesome": "^7.1.3",
     "nx": "17.1.1",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
