test: optimize e2e specs
test: optimize e2e specs

test: optimize e2e specs

--- a/apps/e2e/project.json
+++ b/apps/e2e/project.json
@@ -4,7 +4,7 @@
   "sourceRoot": "apps/e2e/src",
   "projectType": "application",
   "targets": {
-    "e2e-open": {
+    "e2e-ui": {
       "executor": "@nx/cypress:cypress",
       "defaultConfiguration": "test",
       "options": {
@@ -22,6 +22,23 @@
         }
       }
     },
+    "e2e-no-servers": {
+      "executor": "@nx/cypress:cypress",
+      "defaultConfiguration": "test",
+      "options": {
+        "cypressConfig": "apps/e2e/cypress.test.config.ts",
+        "baseUrl": "http://127.0.0.1:3001",
+        "browser": "electron",
+        "testingType": "e2e"
+      },
+      "configurations": {
+        "test": {
+          "record": true,
+          "watch": false,
+          "exit": true
+        }
+      }
+    },
     "e2e": {
       "executor": "@nx/cypress:cypress",
       "defaultConfiguration": "test",
@@ -34,7 +51,6 @@
       "configurations": {
         "test": {
           "devServerTarget": "e2e:serve:test",
-          "reporter": "../../node_modules/cypress-multi-reporters",
           "record": false,
           "watch": false,
           "exit": true
@@ -48,7 +64,9 @@
             "mochaFile": "./tmp/reports/e2e/cypress-results-[hash].xml"
           },
           "record": true,
-          "parallel": true
+          "parallel": true,
+          "watch": false,
+          "exit": true
         }
       }
     },
@@ -78,6 +96,13 @@
         "readyWhen": "READY"
       },
       "configurations": {
+        "dev": {
+          "commands": [
+            {
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck  && echo 'READY'"
+            }
+          ]
+        },
         "test": {
           "commands": [
             {
