--- a/.circleci/config/jobs/codegen.yml
+++ b/.circleci/config/jobs/codegen.yml
@@ -3,5 +3,8 @@ resource_class: medium
 steps:
   - restore-workspace
   - run:
-      name: 'GraphQL Codegen'
+      name: 'Check GraphQL Codegen'
       command: pnpm cli tasks codegen --stage ci
+  - run:
+      name: 'Check Generate Workspace'
+      command: pnpm cli tasks generate-workspace --stage ci
