--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "e2e": "nx e2e-open e2e -c test",
+    "e2e": "nx e2e-ui e2e -c test",
     "e2e:api": "nx serve api -c test",
     "cli": "scripts/nx/cli.sh",
     "docker:up": "scripts/docker/dev/up.sh",
@@ -64,6 +64,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.3",
+    "@graphql-codegen/typescript-document-nodes": "^4.0.7",
     "@graphql-hive/client": "^0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
@@ -79,6 +80,7 @@
     "@nestjs/config": "2.3.2",
     "@nestjs/core": "10.0.4",
     "@nestjs/cqrs": "10.0.1",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/graphql": "11.0.6",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.0.4",
@@ -118,6 +120,7 @@
     "antd": "5.16.5",
     "auth0": "4.3.1",
     "axios": "1.5.0",
+    "body-parser": "^1.20.2",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -125,9 +128,11 @@
     "clsx": "2.1.0",
     "cm6-graphql": "0.0.9",
     "codemirror": "6.0.1",
+    "cors": "^2.8.5",
     "cross-fetch": "3.1.4",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
+    "dots-wrapper": "^3.11.8",
     "env-var": "7.4.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
@@ -137,6 +142,7 @@
     "graphql": "16.6.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
+    "graphql-ws": "^5.16.0",
     "isolated-vm": "4.6.0",
     "jest-text-transformer": "1.0.4",
     "jquery": "3.6.4",
@@ -198,7 +204,9 @@
     "voca": "1.4.0",
     "wait-on": "6.0.1",
     "winston": "3.8.2",
-    "yargs": "17.7.2"
+    "ws": "^8.17.0",
+    "yargs": "17.7.2",
+    "zen-observable-ts": "^1.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
@@ -285,6 +293,7 @@
     "@types/voca": "1.4.2",
     "@types/wait-on": "5.3.1",
     "@types/webpack": "5.28.0",
+    "@types/ws": "^8.5.10",
     "@types/yargs": "17.0.24",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
