wip: fix pnpm version

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 # Need to add this here so when someone tries to use NPM, an error is thrown
 engine-strict=true
+package-manager-strict=false
 strict-ssl=false
 
 @fortawesome:registry=https://npm.fontawesome.com/
