--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -9,7 +9,7 @@ steps:
       name: 'Monitor NX Cache Size'
       command: ./scripts/nx/reset-cache.sh
   # Can't use `pnpm cli` doesn't exist yet
-  - run: npx nx run-many --target=build --projects=web,api,sites,e2e,cli --parallel=3 -c ci --nx-bail
+  - run: pnpm nx affected --target=build --projects=web,api,sites,e2e,cli --parallel=3 -c ci --nx-bail
   - save_cache:
       name: 'Save NX Cache'
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
