--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -4,6 +4,7 @@ steps:
       name: 'Restore NX Cache'
       keys:
         # - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+        # `lockfile.hash` doesn't exist yet, we restore the latest `nx-cache`
         - nx-cache
   - run:
       name: 'Monitor NX Cache Size'
@@ -15,9 +16,7 @@ steps:
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
         - ~/project/.nx/cache
-        - ~/project/dist/apps/cli
-        # Require this to run e2e
-        # - ~/project/dist/apps/web/.next/cache
-        - ~/project/dist/apps/api
-        # - ~/project/dist/apps/sites/.next/cache
-        # - ~/project/dist/apps/landing/.next/cache
+        # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
+        - ~/project/dist/apps/web/.next/cache
+        - ~/project/dist/apps/sites/.next/cache
+        - ~/project/dist/apps/landing/.next/cache
