--- a/package.json
+++ b/package.json
@@ -64,14 +64,14 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.3",
-    "@graphql-codegen/typescript-document-nodes": "^4.0.7",
-    "@graphql-hive/client": "^0.29.0",
+    "@graphql-codegen/typescript-document-nodes": "4.0.7",
+    "@graphql-hive/client": "0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
-    "@lexical/html": "^0.14.3",
-    "@lexical/link": "^0.14.3",
-    "@lexical/react": "^0.14.3",
-    "@lexical/utils": "^0.14.3",
+    "@lexical/html": "0.14.3",
+    "@lexical/link": "0.14.3",
+    "@lexical/react": "0.14.3",
+    "@lexical/utils": "0.14.3",
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
@@ -80,25 +80,25 @@
     "@nestjs/config": "2.3.2",
     "@nestjs/core": "10.0.4",
     "@nestjs/cqrs": "10.0.1",
-    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/event-emitter": "2.0.4",
     "@nestjs/graphql": "11.0.6",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.0.4",
     "@nestjs/swagger": "7.1.2",
-    "@newrelic/browser-agent": "^1.253.0",
+    "@newrelic/browser-agent": "1.253.0",
     "@next/bundle-analyzer": "14.0.2",
-    "@opentelemetry/api": "^1.8.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.43.0",
-    "@opentelemetry/context-zone": "^1.22.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.49.1",
-    "@opentelemetry/instrumentation": "^0.49.1",
-    "@opentelemetry/instrumentation-document-load": "^0.36.0",
-    "@opentelemetry/propagator-b3": "^1.22.0",
-    "@opentelemetry/resources": "^1.22.0",
-    "@opentelemetry/sdk-node": "^0.49.1",
-    "@opentelemetry/sdk-trace-base": "^1.22.0",
-    "@opentelemetry/sdk-trace-web": "^1.22.0",
-    "@opentelemetry/semantic-conventions": "^1.22.0",
+    "@opentelemetry/api": "1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "0.43.0",
+    "@opentelemetry/context-zone": "1.22.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.49.1",
+    "@opentelemetry/instrumentation": "0.49.1",
+    "@opentelemetry/instrumentation-document-load": "0.36.0",
+    "@opentelemetry/propagator-b3": "1.22.0",
+    "@opentelemetry/resources": "1.22.0",
+    "@opentelemetry/sdk-node": "0.49.1",
+    "@opentelemetry/sdk-trace-base": "1.22.0",
+    "@opentelemetry/sdk-trace-web": "1.22.0",
+    "@opentelemetry/semantic-conventions": "1.22.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
@@ -120,7 +120,7 @@
     "antd": "5.16.5",
     "auth0": "4.3.1",
     "axios": "1.5.0",
-    "body-parser": "^1.20.2",
+    "body-parser": "1.20.2",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -128,27 +128,27 @@
     "clsx": "2.1.0",
     "cm6-graphql": "0.0.9",
     "codemirror": "6.0.1",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "cross-fetch": "3.1.4",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
-    "dots-wrapper": "^3.11.8",
+    "dots-wrapper": "3.11.8",
     "env-var": "7.4.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
     "framer-motion": "6.3.3",
-    "fs-extra": "^11.2.0",
-    "glob": "^10.3.12",
+    "fs-extra": "11.2.0",
+    "glob": "10.3.12",
     "graphql": "16.6.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
-    "graphql-ws": "^5.16.0",
+    "graphql-ws": "5.16.0",
     "isolated-vm": "4.6.0",
     "jest-text-transformer": "1.0.4",
     "jquery": "3.6.4",
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.0.1",
-    "lexical": "^0.14.3",
+    "lexical": "0.14.3",
     "lodash": "4.17.21",
     "mobx": "6.11.0",
     "mobx-keystone": "1.9.0",
@@ -163,7 +163,7 @@
     "object-typed": "1.0.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
-    "path-to-regexp": "^6.2.1",
+    "path-to-regexp": "6.2.1",
     "pino": "8.19.0",
     "pino-http": "9.0.0",
     "prettier": "2.8.8",
@@ -204,9 +204,9 @@
     "voca": "1.4.0",
     "wait-on": "6.0.1",
     "winston": "3.8.2",
-    "ws": "^8.17.0",
+    "ws": "8.17.0",
     "yargs": "17.7.2",
-    "zen-observable-ts": "^1.1.0"
+    "zen-observable-ts": "1.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
@@ -218,7 +218,7 @@
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
     "@graphql-codegen/typescript-operations": "4.2.0",
     "@graphql-eslint/eslint-plugin": "3.20.1",
-    "@graphql-hive/cli": "^0.34.0",
+    "@graphql-hive/cli": "0.34.0",
     "@hon2a/cypress-without": "2.1.0",
     "@ls-lint/ls-lint": "2.0.0",
     "@nestjs/cli": "10.0.2",
@@ -266,7 +266,7 @@
     "@types/diff": "5.0.3",
     "@types/express": "4.17.21",
     "@types/flat": "5.0.2",
-    "@types/fs-extra": "^11.0.4",
+    "@types/fs-extra": "11.0.4",
     "@types/glob": "8.1.0",
     "@types/jest": "29.5.2",
     "@types/jquery": "3.5.16",
@@ -293,7 +293,7 @@
     "@types/voca": "1.4.2",
     "@types/wait-on": "5.3.1",
     "@types/webpack": "5.28.0",
-    "@types/ws": "^8.5.10",
+    "@types/ws": "8.5.10",
     "@types/yargs": "17.0.24",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
@@ -313,7 +313,7 @@
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
     "cypress-multi-reporters": "1.6.3",
-    "cypress-network-idle": "^1.14.2",
+    "cypress-network-idle": "1.14.2",
     "cypress-terminal-report": "6.0.1",
     "cz-customizable": "6.3.0",
     "dotenv": "15.0.0",
