--- a/apps/e2e/project.json
+++ b/apps/e2e/project.json
@@ -12,7 +12,7 @@
       "options": {
         "cypressConfig": "apps/e2e/cypress.test.config.ts",
         "baseUrl": "http://127.0.0.1:3001",
-        "browser": "electron",
+        "browser": "chrome",
         "testingType": "e2e"
       },
       "configurations": {
@@ -28,7 +28,7 @@
       "options": {
         "cypressConfig": "apps/e2e/cypress.test.config.ts",
         "baseUrl": "http://127.0.0.1:3001",
-        "browser": "electron",
+        "browser": "chrome",
         "testingType": "e2e"
       },
       "configurations": {
@@ -80,14 +80,14 @@
         "dev": {
           "commands": [
             {
-              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck  && echo 'READY'"
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck && echo 'READY'"
             }
           ]
         },
         "test": {
           "commands": [
             {
-              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck  && echo 'READY'"
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck && echo 'READY'"
             },
             {
               "command": "npx nx serve web -c test"
@@ -106,7 +106,7 @@
               "command": "npx nx serve web -c ci"
             },
             {
-              "command": "npx nx serve api -c ci --verbose"
+              "command": "npx nx serve api -c ci"
             }
           ]
         }
