--- a/libs/frontend/domain/redirect/tsconfig.lib.json
+++ b/libs/frontend/domain/redirect/tsconfig.lib.json
@@ -12,5 +12,5 @@
     "../../../../node_modules/@nx/react/typings/image.d.ts"
   ],
   "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "jest.config.ts"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "**/*.graphql"]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
