--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.5.0",
-    "@codelab/eslint-plugin": "file:./dist/libs/tools/eslint-plugin",
-    "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
+    "@codelab/eslint-plugin": "file:dist/libs/tools/eslint-plugin",
+    "@codelab/tools-workspace": "file:dist/libs/tools/workspace",
     "@codemirror/autocomplete": "6.12.0",
     "@codemirror/commands": "6.3.3",
     "@codemirror/lang-css": "6.2.1",
@@ -106,7 +106,7 @@
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
-    "@sinclair/typebox": "0.31.23",
+    "@sinclair/typebox": "0.32.30",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.3",
@@ -119,7 +119,7 @@
     "animate.css": "4.1.1",
     "antd": "5.16.5",
     "auth0": "4.3.1",
-    "axios": "1.5.0",
+    "axios": "1.7.1",
     "body-parser": "1.20.2",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
@@ -156,8 +156,8 @@
     "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.16.0",
     "nestjs-pino": "4.0.0",
-    "nestjs-typebox": "2.6.1",
-    "next": "14.2.3",
+    "nestjs-typebox": "3.0.0-next.8",
+    "next": "14.0.4",
     "next-http-proxy-middleware": "1.2.6",
     "next-seo": "6.5.0",
     "object-typed": "1.0.0",
@@ -171,8 +171,8 @@
     "ramda": "0.29.0",
     "rc-select": "14.13.0",
     "rc-upload": "4.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-error-boundary": "3.1.4",
     "react-grid-layout": "1.4.2",
     "react-hotjar": "5.3.0",
@@ -224,36 +224,36 @@
     "@nestjs/cli": "10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "17.1.1",
-    "@nx/devkit": "17.1.1",
-    "@nx/eslint": "17.1.1",
-    "@nx/eslint-plugin": "17.1.1",
-    "@nx/jest": "17.1.1",
-    "@nx/js": "17.1.1",
-    "@nx/nest": "17.1.1",
-    "@nx/next": "17.1.1",
-    "@nx/node": "17.1.1",
-    "@nx/plugin": "17.1.1",
-    "@nx/react": "17.1.1",
-    "@nx/storybook": "17.1.1",
-    "@nx/web": "17.1.1",
-    "@nx/webpack": "17.1.1",
-    "@nx/workspace": "17.1.1",
+    "@nx/cypress": "19.0.4",
+    "@nx/devkit": "19.0.4",
+    "@nx/eslint": "19.0.4",
+    "@nx/eslint-plugin": "19.0.4",
+    "@nx/jest": "19.0.4",
+    "@nx/js": "19.0.4",
+    "@nx/nest": "19.0.4",
+    "@nx/next": "19.0.4",
+    "@nx/node": "19.0.4",
+    "@nx/plugin": "19.0.4",
+    "@nx/react": "19.0.4",
+    "@nx/storybook": "19.0.4",
+    "@nx/web": "19.0.4",
+    "@nx/webpack": "19.0.4",
+    "@nx/workspace": "19.0.4",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/core-common": "7.5.3",
     "@storybook/nextjs": "7.5.3",
     "@stylistic/eslint-plugin-ts": "1.6.3",
     "@svgr/webpack": "8.0.1",
-    "@swc-node/register": "1.6.8",
-    "@swc/cli": "~0.1.62",
+    "@swc-node/register": "~1.8.0",
+    "@swc/cli": "0.3.12",
     "@swc/core": "1.3.92",
     "@swc/jest": "0.2.29",
     "@swc/plugin-styled-components": "1.5.118",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "10.0.0",
     "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "15.0.1",
+    "@testing-library/react": "15.0.6",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/adm-zip": "0.5.0",
@@ -276,12 +276,12 @@
     "@types/lodash": "4.14.186",
     "@types/mailchimp__mailchimp_marketing": "3.0.8",
     "@types/multer": "1.4.11",
-    "@types/node": "18.14.2",
+    "@types/node": "18.19.33",
     "@types/passport-jwt": "3.0.9",
     "@types/prettier": "2.7.3",
     "@types/ramda": "0.29.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-grid-layout": "1.3.4",
     "@types/react-resizable": "1.7.4",
     "@types/react-responsive": "8.0.5",
@@ -295,9 +295,9 @@
     "@types/webpack": "5.28.0",
     "@types/ws": "8.5.10",
     "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "@typescript-eslint/utils": "7.2.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "@typescript-eslint/utils": "7.9.0",
     "@welldone-software/why-did-you-render": "8.0.1",
     "ajv-formats": "2.1.1",
     "ajv-keywords": "5.1.0",
@@ -309,7 +309,7 @@
     "concurrently": "7.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "cypress": "13.7.0",
+    "cypress": "13.9.0",
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
     "cypress-multi-reporters": "1.6.3",
@@ -318,7 +318,7 @@
     "cz-customizable": "6.3.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
-    "eslint": "8.53.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
@@ -352,14 +352,14 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
-    "nx": "17.1.1",
+    "nx": "19.0.4",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
     "process": "0.11.10",
     "tailwindcss": "3.4.1",
     "ts-essentials": "9.1.2",
     "ts-morph": "19.0.0",
-    "typescript": "5.2.2",
+    "typescript": "5.4.5",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
   },
