--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "e2e": "nx e2e-ui e2e -c test",
+    "e2e": "nx e2e e2e -c test --skipServe --watch",
+    "e2e:web": "nx serve web -c test",
     "e2e:api": "nx serve api -c test",
     "cli": "scripts/nx/cli.sh",
     "docker:up": "scripts/docker/dev/up.sh",
@@ -65,7 +66,6 @@
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.3",
     "@graphql-codegen/typescript-document-nodes": "4.0.7",
-    "@graphql-hive/client": "0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
     "@lexical/html": "0.14.3",
@@ -167,7 +167,7 @@
     "pino": "8.19.0",
     "pino-http": "9.0.0",
     "prettier": "2.8.8",
-    "puppeteer": "20.1.1",
+    "puppeteer": "22.9.0",
     "ramda": "0.29.0",
     "rc-select": "14.13.0",
     "rc-upload": "4.5.2",
