--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     "typescript-sort-keys",
     "unicorn",
     "@stylistic/ts",
-    "react"
+    "react",
+    "barrel-files"
   ],
   "parser": "@typescript-eslint/parser",
   "env": {
@@ -32,7 +33,8 @@
     "./scripts/eslint/.codelab.eslintrc.json",
     "plugin:prettier/recommended",
     // "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:barrel-files/recommended"
     // We first apply `typescript-sort-keys`, then comment off and manually move methods after properties
     // "plugin:typescript-sort-keys/recommended"
     // "plugin:import/recommended",
@@ -62,6 +64,12 @@
       "plugins": [],
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
+        "barrel-files/avoid-barrel-files": [
+          "error",
+          {
+            "amountOfExportsToConsiderModuleAsBarrel": 3
+          }
+        ],
         "@stylistic/ts/quotes": ["error", "single", { "avoidEscape": true }],
         // "unused-imports/no-unused-imports-ts": "error",
         "@typescript-eslint/no-unused-vars": "off",
