--- a/libs/frontend/application/app/tsconfig.lib.json
+++ b/libs/frontend/application/app/tsconfig.lib.json
@@ -4,6 +4,7 @@
     "outDir": "../../../../dist/out-tsc",
     "types": ["node"]
   },
+  "references": [{ "use-cases": "src/use-cases" }, { "views": "src/views" }],
   "files": [
     "../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
     "../../../../node_modules/@nx/react/typings/image.d.ts"
