--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "dir-compare": "4.2.0",
     "dots-wrapper": "3.11.8",
     "env-var": "7.4.1",
+    "eslint-plugin-barrel-files": "^1.0.5",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
     "framer-motion": "6.3.3",
@@ -188,7 +189,7 @@
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
-    "rxjs": "7.8.0",
+    "rxjs": "7.8.1",
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
