--- a/libs/frontend/infra/mobx/tsconfig.json
+++ b/libs/frontend/infra/mobx/tsconfig.json
@@ -8,6 +8,9 @@
     }
   ],
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
