--- a/package.json
+++ b/package.json
@@ -88,6 +88,18 @@
     "@nestjs/swagger": "7.1.2",
     "@newrelic/browser-agent": "1.253.0",
     "@next/bundle-analyzer": "14.0.2",
+    "@opentelemetry/api": "1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "0.43.0",
+    "@opentelemetry/context-zone": "1.22.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.49.1",
+    "@opentelemetry/instrumentation": "0.49.1",
+    "@opentelemetry/instrumentation-document-load": "0.36.0",
+    "@opentelemetry/propagator-b3": "1.22.0",
+    "@opentelemetry/resources": "1.22.0",
+    "@opentelemetry/sdk-node": "0.49.1",
+    "@opentelemetry/sdk-trace-base": "1.22.0",
+    "@opentelemetry/sdk-trace-web": "1.22.0",
+    "@opentelemetry/semantic-conventions": "1.22.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
@@ -215,21 +227,21 @@
     "@nestjs/cli": "10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "19.0.6",
-    "@nx/devkit": "19.0.6",
-    "@nx/eslint": "19.0.6",
-    "@nx/eslint-plugin": "19.0.6",
-    "@nx/jest": "19.0.6",
-    "@nx/js": "19.0.6",
-    "@nx/nest": "19.0.6",
-    "@nx/next": "19.0.6",
-    "@nx/node": "19.0.6",
-    "@nx/plugin": "19.0.6",
-    "@nx/react": "19.0.6",
-    "@nx/storybook": "19.0.6",
-    "@nx/web": "19.0.6",
-    "@nx/webpack": "19.0.6",
-    "@nx/workspace": "19.0.6",
+    "@nx/cypress": "19.1.0",
+    "@nx/devkit": "19.1.0",
+    "@nx/eslint": "19.1.0",
+    "@nx/eslint-plugin": "19.1.0",
+    "@nx/jest": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/nest": "19.1.0",
+    "@nx/next": "19.1.0",
+    "@nx/node": "19.1.0",
+    "@nx/plugin": "19.1.0",
+    "@nx/react": "19.1.0",
+    "@nx/storybook": "19.1.0",
+    "@nx/web": "19.1.0",
+    "@nx/webpack": "19.1.0",
+    "@nx/workspace": "19.1.0",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/core-common": "7.5.3",
@@ -343,7 +355,7 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
-    "nx": "19.0.6",
+    "nx": "19.1.0",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
     "process": "0.11.10",
