wip: add codegen for paths
wip: add codegen for paths

wip: add codegen for paths

wip: add codegen for paths

wip: add codegen for paths

--- a/libs/frontend/presentation/components/css-editor/project.json
+++ b/libs/frontend/presentation/components/css-editor/project.json
@@ -3,8 +3,12 @@
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/frontend/presentation/components/css-editor/src",
   "projectType": "library",
-  "tags": ["scope:frontend", "layer:presentation"],
-  "// targets": "to see all targets run: nx show project frontend-presentation-components-css-editor --web",
+  "tags": [
+    "layer:presentation",
+    "projectType:library",
+    "type:concrete",
+    "scope:frontend"
+  ],
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
