--- a/package.json
+++ b/package.json
@@ -356,6 +356,7 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
+    "minimatch": "^9.0.4",
     "nx": "19.1.0",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
