--- a/libs/frontend/application/builder/tsconfig.lib.json
+++ b/libs/frontend/application/builder/tsconfig.lib.json
@@ -19,11 +19,5 @@
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx"
   ],
-  "include": [
-    "src/**/*.js",
-    "src/**/*.jsx",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "../renderer/src/element/useSelectionHandlers.hook.ts"
-  ]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
