--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -49,6 +49,15 @@
       "options": {
         "buildTarget": "api:build:dev"
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/api/jest.config.ts",
+        "reporters": ["default"],
+        "runInBand": true
+      }
     }
   }
 }
