--- a/package.json
+++ b/package.json
@@ -90,7 +90,9 @@
     "@next/bundle-analyzer": "14.0.2",
     "@opentelemetry/api": "1.8.0",
     "@opentelemetry/auto-instrumentations-node": "0.43.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.39.0",
     "@opentelemetry/context-zone": "1.22.0",
+    "@opentelemetry/core": "^1.24.1",
     "@opentelemetry/exporter-trace-otlp-http": "0.49.1",
     "@opentelemetry/instrumentation": "0.49.1",
     "@opentelemetry/instrumentation-document-load": "0.36.0",
