refactor: testing out app pages
refactor: testing out app pages

refactor: testing out app pages

--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
     "antd": "5.17.3",
-    "auth0": "4.3.1",
+    "auth0": "4.4.0",
     "axios": "1.7.1",
     "body-parser": "1.20.2",
     "chalk": "4.1.2",
@@ -231,21 +231,23 @@
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/cypress": "19.1.0",
-    "@nx/devkit": "19.1.0",
-    "@nx/eslint": "19.1.0",
-    "@nx/eslint-plugin": "19.1.0",
-    "@nx/jest": "19.1.0",
-    "@nx/js": "19.1.0",
-    "@nx/nest": "19.1.0",
-    "@nx/next": "19.1.0",
-    "@nx/node": "19.1.0",
-    "@nx/plugin": "19.1.0",
-    "@nx/react": "19.1.0",
-    "@nx/storybook": "19.1.0",
-    "@nx/web": "19.1.0",
-    "@nx/webpack": "19.1.0",
-    "@nx/workspace": "19.1.0",
+    "@nx/cypress": "19.1.1",
+    "@nx/devkit": "19.1.1",
+    "@nx/eslint": "19.1.1",
+    "@nx/eslint-plugin": "19.1.1",
+    "@nx/jest": "19.1.1",
+    "@nx/js": "19.1.1",
+    "@nx/nest": "19.1.1",
+    "@nx/next": "19.1.1",
+    "@nx/node": "19.1.1",
+    "@nx/playwright": "19.1.1",
+    "@nx/plugin": "19.1.1",
+    "@nx/react": "19.1.1",
+    "@nx/storybook": "19.1.1",
+    "@nx/web": "19.1.1",
+    "@nx/webpack": "19.1.1",
+    "@nx/workspace": "19.1.1",
+    "@playwright/test": "^1.36.0",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/core-common": "7.5.3",
@@ -265,7 +267,7 @@
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/adm-zip": "0.5.0",
-    "@types/auth0": "3.3.6",
+    "@types/auth0": "3.3.10",
     "@types/aws-lambda": "8.10.116",
     "@types/buble": "0.20.1",
     "@types/chance": "1.1.4",
@@ -339,6 +341,7 @@
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-lodash": "7.4.0",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.33.2",
@@ -362,7 +365,7 @@
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.1.0",
+    "nx": "19.1.1",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
     "process": "0.11.10",
@@ -371,6 +374,7 @@
     "ts-jest": "^29.1.0",
     "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
+    "ttab": "^0.9.0",
     "typescript": "5.4.5",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
